@@ -1,5 +1,10 @@
 2019-10-11  Steven G. Kargl  <kargl@gcc.gnu.org>
 
+	PR fortran/91649
+	* gfortran.dg/pr91649.f90: New test.
+
+2019-10-11  Steven G. Kargl  <kargl@gcc.gnu.org>
+
 	PR fortran/91715
 	* gfortran.dg/function_kinds_5.f90: Prune run-on error.
 	* gfortran.dg/pr85543.f90: Ditto.
